test_programs/compile_failure/noirc_frontend_tests_error_on_cast_over_type_variable/src/main.nr

    pub fn foo<T, U>(f: fn(T) -> U, x: T, ) -> U {
        f(x)
    }

    fn main() {
        let x = "a";
        let _: Field = foo(|x| x as Field, x);
    }
    